--- a/Classification_Project.ipynb
+++ b/Classification_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1FHKQDZbtHkFkFeIHmDA7FUgV0NnONRPb",
-      "authorship_tag": "ABX9TyNnT2ofmChoceFRPOYDCZ5O",
+      "authorship_tag": "ABX9TyMtqxr8dCD7neeNN6Ode1RP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/ranjan0601/Tweet_Sentiment_Analysis/blob/main/Classification_Project.ipynb"
+      ],
       "metadata": {
         "id": "MU6rB4m4PcPq"
       }
